# june-2026-tictactoe-bots

./: .dockerignore  .gitignore  .markdownlint.json  CLAUDE.md  Dockerfile  MUTATION_FINDINGS.md  Makefile  README.md  TODO.md  docker-compose.yml  flake.nix  k8s-plan.md  mocks.md  pyproject.toml  smells.md  sql.md
alembic/: env.py
alembic/versions/: 353c41ecc7b4_add_bot_source_column.py  9a3c5e7f1b2d_add_correlation_id_to_matches.py  b4e7f2a91c8d_add_runtime_key_to_bots.py  c19b6e2bf955_initial_schema.py  c6ce93889b8c_initial_schema.py  e3991cfac58e_add_pod_name_and_pod_ready_to_bots.py  f3af65520232_drop_bot_file_path_column.py
bot-runner-images/: README.md
bot-runner-images/python/: Dockerfile  turn_server.py
db/: database.py  schema.sql  session.py
db/models/: __init__.py  bot.py  match.py  move.py
dispatcher/: main.py  match_runner.py  ondeck_handler.py  pod_builder.py  pods.py
entities/bot/: model.py  repository.py
entities/match/: model.py  repository.py
entities/move/: model.py  repository.py
example_bots/: defense_only_bot.py  diagonal_blind_bot.py  double_mover_bot.py  horizontal_blind_bot.py  offense_only_bot.py  overwriter_bot.py  perfect_bot_v1.py  perfect_bot_v2.py  py310.py  py311.py  py312.py  py313.py  py314.py  vertical_blind_bot.py
k8s/: kind-cluster.yaml  kustomization.yaml  network-policy.yaml
k8s/dispatcher/: Deployment.yaml  Namespace.yaml  Role.yaml  RoleBinding.yaml  Secret.yaml  ServiceAccount.yaml  kustomization.yaml
k8s/platform/: kustomization.yaml
k8s/platform/match-scheduler/: Deployment.yaml
k8s/platform/postgres/: Deployment.yaml  Service.yaml  StatefulSet.yaml
k8s/platform/rabbitmq/: Deployment.yaml  Service.yaml
k8s/platform/secrets/: postgres.yaml  rabbitmq.yaml
k8s/platform/values/: postgres.yaml  rabbitmq.yaml
k8s/platform/web/: Deployment.yaml  Role.yaml  RoleBinding.yaml  Service.yaml  ServiceAccount.yaml
match_scheduler/: main.py
messaging/: __init__.py  amqp.py  client.py  connection.py  contracts.py  health.py  log.py  queue.py  rabbitmq.py  routing.py  rpc.py  rpc_client.py  rpc_server.py
runner/: bot_subprocess.py  dispatch.py  engine.py  match_loop.py  match_runner.py  orchestrator.py  turn_worker.py
scripts/: export_bots.py  js_coverage_report.py  reset_db.py  seed.py  seed_example_bots.py
tests/: conftest.py  test_amqp_parse.py  test_bot_client.py  test_contracts.py  test_dashboard.py  test_delete_bot_pods.py  test_dependencies.py  test_dispatcher_match_runner.py  test_dispatcher_pods.py  test_engine.py  test_export_bots.py  test_health.py  test_home.py  test_js_coverage_report.py  test_leaderboard_acceptance.py  test_leaderboard_repository.py  test_match_player.py  test_match_runner.py  test_match_scheduler.py  test_messaging.py  test_ondeck_handler.py  test_orchestrator.py  test_pages.py  test_play.py  test_play_game.py  test_play_turn_integration.py  test_pod_builder.py  test_purge_rabbitmq.py  test_repositories.py  test_reset_db.py  test_seed_example_bots.py  test_submission.py  test_templates.py  test_turn_worker.py
tests/acceptance/: conftest.py  test_turn_rpc.py
tests/browser/: conftest.py  test_match_player.py  test_play.py
tests/js/: match-player-state.test.mjs  play-state.test.mjs
web/: bot_client.py  dependencies.py  main.py  play.py  runtimes.py  submit.py  templates.py  utils.py
web/static/: dashboard.mjs  live-poll.js  match-player-state.mjs  match-player.mjs  play-state.mjs  play.mjs  style.css  tabs.js
web/templates/: 404.html  base.html  bot_detail.html  dashboard.html  home.html  index.html  leaderboard.html  match_detail.html  matches.html  play.html  play_game.html  play_name.html  play_name_set.html  submit.html  template_bot.py  test_template_bot.py
