[project]
name = "tic-tac-toe-event"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "greenlet",
    "asyncpg",
    # psycopg2 is only used for the sync admin connection in tests/conftest.py
    # (CREATE DATABASE before the async machinery is alive) — kept as a dev
    # dependency below rather than a runtime one. Production / scripts /
    # runner / web all use asyncpg exclusively.
    "aio-pika",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx2",
    "ruff",
    "ty",
    "poethepoet>=0.46.0",
    "pymarkdownlnt>=0.9",
    # Only the test conftest's admin-database bootstrap uses psycopg2 (sync
    # connection for CREATE DATABASE before the async machinery comes up).
    # The runtime app is async-only.
    "psycopg2-binary",
]

[tool.poe.tasks]
test         = "pytest"
lint         = "ruff check ."
lint-md      = "pymarkdown scan README.md TODO.md CLAUDE.md"
format       = "ruff format ."
typecheck    = "ty check web/ db/ entities/ runner/ messaging/ scripts/ tests/"
seed-examples = "python -m scripts.seed_example_bots"
reset-db     = "python -m scripts.reset_db"

[tool.poe.tasks.check]
sequence = ["lint", "lint-md", "typecheck", "test"]

[tool.ruff]
target-version = "py311"
exclude = ["bots/", "example_bots/", "alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"scripts/*" = ["ANN"]

[tool.pytest.ini_options]
addopts = "--cov=web --cov=db --cov=entities --cov=runner --cov=messaging --cov=scripts --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["bots/*", "tests/*", "example_bots/*"]
# Use Python's sys.monitoring (Python 3.12+); the default sys.settrace tracer
# misses lines inside async with blocks that go through @asynccontextmanager.
core = "sysmon"

[tool.coverage.report]
# Setting exclude_lines REPLACES the defaults, so include `pragma: no cover`
# explicitly along with our extras.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pymarkdown]
# MD013: line length — disabled because we use long prose lines; editors and
# GitHub reflow them automatically and hard-wrapping makes diffs noisy.
plugins.md013.enabled = false
