[project]
name = "tic-tac-toe-event"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "greenlet",
    "asyncpg",
    # psycopg2 is only used for the sync admin connection in tests/conftest.py
    # (CREATE DATABASE before the async machinery is alive) — kept as a dev
    # dependency below rather than a runtime one. Production / scripts /
    # runner / web all use asyncpg exclusively.
    "aio-pika",
    "structlog>=26.1.0",
    "pydantic>=2.13.4",
]

[tool.uv]
package = false

[dependency-groups]
dispatcher = [
    "kubernetes>=30.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx2",
    "ruff",
    "ty",
    "poethepoet>=0.46.0",
    "pymarkdownlnt>=0.9",
    # Only the test conftest's admin-database bootstrap uses psycopg2 (sync
    # connection for CREATE DATABASE before the async machinery comes up).
    # The runtime app is async-only.
    "psycopg2-binary",
    "mutmut>=3.5.0",
    "beautifulsoup4>=4.15.0",
    # needed for dispatcher unit tests
    {include-group = "dispatcher"},
]

[tool.poe.tasks]
test         = "pytest"
lint         = "ruff check ."
lint-md      = "pymarkdown scan README.md TODO.md CLAUDE.md"
format       = "ruff format ."
typecheck    = "ty check web/ db/ entities/ runner/ messaging/ scripts/ tests/"
seed-examples = "python -m scripts.seed_example_bots"
reset-db     = "python -m scripts.reset_db"
mutate       = "mutmut run"

[tool.poe.tasks.check]
sequence = ["lint", "lint-md", "typecheck", "test"]

[tool.poe.tasks.acceptance]
# Live-stack acceptance tests. Requires the compose broker and either the
# compose worker or the kind dispatcher running.
cmd = "pytest tests/acceptance/ -o addopts=--no-cov -v"

[tool.poe.tasks.kind-up]
# Create the kind cluster (idempotent — skips if already exists).
shell = """
nix develop --command sh -c '
  kind get clusters 2>/dev/null | grep -q "^kind$" \
    && echo "cluster already exists" \
    || kind create cluster --config k8s/kind-cluster.yaml

  helm repo add bitnami https://charts.bitnami.com/bitnami 2>/dev/null || true
  helm repo update

  kubectl apply -f k8s/platform/Namespace.yaml

  helm upgrade --install postgres bitnami/postgresql \
    -n platform -f k8s/platform/values/postgres.yaml
  helm upgrade --install rabbitmq bitnami/rabbitmq \
    -n platform -f k8s/platform/values/rabbitmq.yaml

  echo "Waiting for postgres to be ready..."
  kubectl rollout status statefulset/postgres-postgresql -n platform --timeout=180s
  echo "Waiting for rabbitmq to be ready..."
  kubectl rollout status deployment/rabbitmq -n platform --timeout=180s

  kubectl apply -k k8s/platform/

  kubectl create namespace bots --dry-run=client -o yaml | kubectl apply -f -
  kubectl apply -f k8s/network-policy.yaml
  kubectl apply -k k8s/dispatcher/
  echo "Infrastructure ready. Run: uv run poe kind-load"
'
"""

[tool.poe.tasks.kind-down]
# Destroy the kind cluster.
shell = "nix develop --command kind delete cluster"

[tool.poe.tasks.build-images]
# Build bot-runner images for all supported Python versions, the dispatcher, web, and match-scheduler.
shell = """
set -e
for ver in 3.10 3.11 3.12 3.13 3.14; do
  docker build -t pyowa/bot-runner-python:${ver} \
    --build-arg PY_VERSION=${ver} \
    bot-runner-images/python/
done
docker build -t pyowa/dispatcher:latest --target dispatcher .
docker build -t pyowa/web:latest --target web .
docker build -t pyowa/match-scheduler:latest --target match-scheduler .
"""

[tool.poe.tasks.kind-load]
# Load locally built images into the kind cluster.
shell = """
set -e
for ver in 3.10 3.11 3.12 3.13 3.14; do
  nix develop --command kind load docker-image pyowa/bot-runner-python:${ver}
done
nix develop --command kind load docker-image pyowa/dispatcher:latest
nix develop --command kind load docker-image pyowa/web:latest
nix develop --command kind load docker-image pyowa/match-scheduler:latest
"""

[tool.poe.tasks.reload-web]
# Rebuild the web image, load it into kind, and restart the deployment.
shell = """
set -e
docker build -t pyowa/web:latest --target web .
nix develop --command kind load docker-image pyowa/web:latest
kubectl rollout restart deployment/web -n platform
"""

[tool.ruff]
target-version = "py311"
exclude = ["bots/", "example_bots/", "alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"scripts/*" = ["ANN"]

[tool.pytest.ini_options]
addopts = "--cov=web --cov=db --cov=entities --cov=runner --cov=messaging --cov=scripts --cov-report=term-missing --ignore=tests/acceptance"
asyncio_mode = "auto"
norecursedirs = ["mutants"]
# Needed for mutmut: it runs pytest from /app/mutants/ where dispatcher,
# match_scheduler etc. aren't on sys.path. This adds /app explicitly.
pythonpath = ["/app"]
markers = [
    "acceptance: live-stack acceptance test against the running compose+k8s stack; opt-in via `poe acceptance`",
]

[tool.coverage.run]
omit = ["bots/*", "tests/*", "example_bots/*"]
# Use Python's sys.monitoring (Python 3.12+); the default sys.settrace tracer
# misses lines inside async with blocks that go through @asynccontextmanager.
core = "sysmon"

[tool.coverage.report]
# Setting exclude_lines REPLACES the defaults, so include `pragma: no cover`
# explicitly along with our extras.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pymarkdown]
# MD013: line length — disabled because we use long prose lines; editors and
# GitHub reflow them automatically and hard-wrapping makes diffs noisy.
plugins.md013.enabled = false

[tool.mutmut]
# mutmut v3 reads paths_to_mutate from this section. The CLI flag
# `--paths-to-mutate` was removed in v3, so this is the only place to set it.
paths_to_mutate = [
    "entities/",
    "db/",
    "runner/",
    "web/",
    "messaging/",
    "scripts/",
]
# Files excluded from mutation testing because they contain only live-broker
# or live-database wiring that cannot be unit-tested without a real service.
# These files are already excluded from coverage via `# pragma: no cover`.
do_not_mutate = [
    "messaging/connection.py",
    "messaging/rpc_server.py",
    "scripts/reset_db.py",
    "scripts/seed_example_bots.py",
]
tests_dir = ["tests/"]
# Disable coverage during mutation runs. mutmut runs pytest from inside
# mutants/ where all source files are trampoline-padded (hundreds of
# generated functions each); instrumenting them causes pytest collection to
# hang. Coverage is irrelevant during mutation testing anyway.
pytest_add_cli_args = ["--override-ini=addopts="]
