[project]
name = "tic-tac-toe-event"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "greenlet",
    "asyncpg",
    # psycopg2 is only used for the sync admin connection in tests/conftest.py
    # (CREATE DATABASE before the async machinery is alive) — kept as a dev
    # dependency below rather than a runtime one. Production / scripts /
    # runner / web all use asyncpg exclusively.
    "aio-pika",
    "structlog>=26.1.0",
    "pydantic>=2.13.4",
]

[tool.uv]
package = false

[dependency-groups]
dispatcher = [
    "kubernetes>=30.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx2",
    "ruff",
    "ty",
    "pymarkdownlnt>=0.9",
    # Only the test conftest's admin-database bootstrap uses psycopg2 (sync
    # connection for CREATE DATABASE before the async machinery comes up).
    # The runtime app is async-only.
    "psycopg2-binary",
    "mutmut>=3.5.0",
    "beautifulsoup4>=4.15.0",
    # Browser-driving tests for the match-detail playback animation. The
    # Chromium binary itself comes from the nix dev shell (see flake.nix);
    # pytest-playwright is just the Python harness. Pin `playwright` to the
    # exact version nix's `playwright-driver` ships so the browser revision
    # the library expects matches the binary already on disk.
    "playwright==1.59.0",
    "pytest-playwright",
    # needed for dispatcher unit tests
    {include-group = "dispatcher"},
]

[tool.ruff]
target-version = "py311"
exclude = ["bots/", "example_bots/", "alembic/versions/"]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]
"scripts/*" = ["ANN"]
"web/templates/*.py" = ["ANN"]

[tool.pytest.ini_options]
addopts = "--cov=web --cov=db --cov=entities --cov=runner --cov=messaging --cov=scripts --cov-report= --ignore=tests/acceptance --ignore=tests/browser"
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["mutants", ".claude"]
# Needed for mutmut: it runs pytest from /app/mutants/ where dispatcher,
# match_scheduler etc. aren't on sys.path. This adds /app explicitly.
pythonpath = ["/app"]
markers = [
    "acceptance: live-stack acceptance test against the running compose+k8s stack; opt-in via `poe acceptance`",
]

[tool.coverage.run]
omit = ["bots/*", "tests/*", "example_bots/*"]
# Use Python's sys.monitoring (Python 3.12+); the default sys.settrace tracer
# misses lines inside async with blocks that go through @asynccontextmanager.
core = "sysmon"

[tool.coverage.report]
# Setting exclude_lines REPLACES the defaults, so include `pragma: no cover`
# explicitly along with our extras.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pymarkdown]
# MD013: line length — disabled because we use long prose lines; editors and
# GitHub reflow them automatically and hard-wrapping makes diffs noisy.
plugins.md013.enabled = false

[tool.mutmut]
# mutmut v3 reads paths_to_mutate from this section. The CLI flag
# `--paths-to-mutate` was removed in v3, so this is the only place to set it.
paths_to_mutate = [
    "entities/",
    "db/",
    "runner/",
    "web/",
    "messaging/",
    "scripts/",
]
# Files excluded from mutation testing because they contain only live-broker
# or live-database wiring that cannot be unit-tested without a real service.
# These files are already excluded from coverage via `# pragma: no cover`.
do_not_mutate = [
    "messaging/connection.py",
    "messaging/rpc_server.py",
    "scripts/reset_db.py",
    "scripts/seed_example_bots.py",
]
tests_dir = ["tests/"]
# Disable coverage during mutation runs. mutmut runs pytest from inside
# mutants/ where all source files are trampoline-padded (hundreds of
# generated functions each); instrumenting them causes pytest collection to
# hang. Coverage is irrelevant during mutation testing anyway.
pytest_add_cli_args = ["--override-ini=addopts="]
